# onshape-featurescript-tools

./: .gitignore  README.md  deploy.py  dxf2gcode.py  fluidnc_upload.py  onshape_client_config.example.yaml  pyproject.toml  setup.sh
doc/: onshape-featurescript-guide.md
examples/gcode/: footer.gcode  header.gcode
featurescripts/: box_panelise.fs
